--- a/src/componentes/CardLayla/LaylaCard.css
+++ b/src/componentes/CardLayla/LaylaCard.css
@@ -1,44 +1,79 @@
 .card-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-    width: 700px;
-    background-color: #8c9cc0;
-    border-radius: 15px;
-    margin: 0 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  width: 100%; 
+  max-width: 700px;
+  background-color: #8c9cc0;
+  border-radius: 15px;
+  margin: 0 auto; 
+  padding: 20px; 
+  box-sizing: border-box;
+}
+
+.card {
+  width: 100%; 
+  max-width: 300px; 
+  overflow: hidden;
+  margin: 0 10px; 
+}
+
+.card-image {
+  height: 200px; 
+  overflow: hidden;
+}
+
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-color: #8c9cc0;
+}
+
+.card-content {
+  padding: 10px;
+  text-align: center;
+}
+
+.card-content h1 {
+  font-size: 2rem; 
+  margin-bottom: 10px;
+  color: white;
+}
+
+.card-content p {
+  font-size: 1rem; 
+  color: white;
+  line-height: 1.5;
+}
+
+@media (max-width: 768px) {
+  .card-container {
+      height: auto; 
+      flex-direction: column;
   }
-  
+
   .card {
-    width: 300px;
-    overflow: hidden;
+      max-width: 90%; 
+      margin: 10px 0; 
   }
-  
-  .card-image {
-    height: 300px;
-    overflow: hidden;
-  }
-  
-  .card-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    background-color: #8c9cc0;
-  }
-  
-  .card-content {
-    padding: 20px;
-    text-align: center;
-  }
-  
+
   .card-content h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
-    color: white;
+      font-size: 1.5rem; 
   }
-  
+
   .card-content p {
-    font-size: 1.2rem;
-    color: white;
-    line-height: 1.5;
+      font-size: 0.9rem;
   }
+}
+
+@media (max-width: 480px) {
+  .card-content h1 {
+      font-size: 1.2rem; 
+  }
+
+  .card-content p {
+      font-size: 0.8rem; 
+  }
+}
