--- a/src/componentes/Footer/Footer.css
+++ b/src/componentes/Footer/Footer.css
@@ -2,9 +2,11 @@
     background-color: #4e6084;
     color: #ffffff;
     width: 100%;
-    padding: 10px 0;
-    position: fixed;
+    padding: 10px;
+    position: relative;
     bottom: 0;
     left: 0;
     z-index: 1000;
+    margin-top: 30px;
+    height: 100px;
   }
