--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -6,6 +6,9 @@
 }
 
 .header img {
-    margin-right: 10px; /* Espacio entre el logo y el menú */
+    margin-right: 10px;
+    position: relative;
+    width: 50px;
+    height: 50px;
 }
 /* Estilo para el header - fin - */
